# NEA-Project

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
assets/game/: character_template.aseprite  wip.aseprite
assets/game/entity/floaty_bomb/: floaty_bomb.aseprite
assets/game/sounds/: credits.txt
assets/game/tiles/: cardboard_box.aseprite
data/game/screens/: main_menu.json
data/game/tiles/: cardboard_box.json  dirt.json  floor.json  look_i_can_name_this_what_i_want.json  orange.json  wall.json
src/: entities.rs  entity.rs  game.rs  level.rs  main.rs  render.rs  resource_location.rs  screen.rs  screens.rs  sound.rs  tests.rs  tile.rs  utils.rs  widget.rs  widgets.rs
src/entities/: dummy.rs  enemy.rs  explosion.rs  floaty_bomb.rs  player.rs  turret.rs
src/screens/: data_driven_screen.rs  hud_screen.rs  main_menu_screen.rs  room_editor_screen.rs  you_died.rs
src/widgets/: death_message.rs  editor_widget.rs  enum_widget.rs  err_widget.rs  play_widget.rs  player_health_widget.rs  quit_widget.rs  score_widget.rs  source_widget.rs
