[package]
name = "NEA-Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
#lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
num = "0.4.1"
once_cell = "1.19.0"
image = "0.25.1"
log = "0.4.22"
log4rs = "1.3.0"
chrono = "0.4.38"
walkdir = "2.5.0"
gjson = "0.8.1"

#sdl2 = "0.36.0"

[features]
sdl2 = ["sdl2/bundled", "sdl2/image"]

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]
