[package]
name = "NEA-Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
#lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
num = "0.4.1"
once_cell = "1.19.0"
image = "0.25.1"
log = "0.4.22"
log4rs = "1.3.0"
chrono = "0.4.38"
walkdir = "2.5.0"
gjson = "0.8.1"
open = "5.3.0"
rodio = "0.19.0"
kira = "0.9.5"

#sdl2 = "0.36.0"

[features]
sdl2 = ["sdl2/bundled", "sdl2/image"]

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
